UptimeKuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-svc
  namespace: uptime
  labels:
    app: uptime
spec:
  ports:
  - protocol: TCP
    name: http
    port: 3001
    targetPort: 3001
  selector:
    app: uptime
