UptimeKuma/Uptime-Kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-app
  namespace: uptime
  labels:
    app: uptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime
  template:
    metadata:
      labels:
        app: uptime
    spec:
      restartPolicy: Always
      containers:
      - name: uptime
        image: louislam/uptime-kuma:latest
        ports:
        - containerPort: 3001
          protocol: TCP
        resources:
          requests:
            cpu: "200m"
            memory: "150Mi"
          limits:
            cpu: "300m"
            memory: "250Mi"
        volumeMounts:
        - name: uptime-vol
          mountPath: /app/data
      volumes:
      - name: uptime-vol
        persistentVolumeClaim:
          claimName: uptime-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-svc
  namespace: uptime
  labels:
    app: uptime
spec:
  ports:
  - protocol: TCP
    name: http
    port: 3001
    targetPort: 3001
  selector:
    app: uptime
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  namespace: uptime
  labels:
    app: uptime
spec:
  rules:
  - host: "uptime.init0xff.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime-svc
            port:
              number: 3001
