UptimeKuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  namespace: uptime
  labels:
    app: uptime
spec:
  rules:
  - host: "uptime.init0xff.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime-svc
            port:
              number: 3001
